// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputWithLabel snapshot number 1`] = `
<div
  class="input-with-label"
>
  <el-input-stub
    autocomplete="off"
    class="input"
    type="number"
    validateevent="true"
  />
  <p
    class="label"
  >
    test label
  </p>
</div>
`;

exports[`InputWithLabel snapshot text 1`] = `
<div
  class="input-with-label"
>
  <el-input-stub
    autocomplete="off"
    class="input"
    type="text"
    validateevent="true"
  />
  <p
    class="label"
  >
    test label
  </p>
</div>
`;
